# ml_ops_3

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/routes/: chat.py  health.py  upload.py
backend/app/services/: bedrock.py  rag.py
frontend/: Dockerfile  app.py  pyproject.toml
