[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F for pycodestyle/pyflakes, I for import order
ignore = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
