[project]
name = "x3-frontend"
version = "0.1.0"
description = "Streamlit frontend for RAG chatbot"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"

dependencies = [
    "streamlit>=1.34.0,<1.39.0",
    "requests>=2.31.0,<2.33.0"   # for API calls to backend
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
ignore = []
